force-app/main/default/objects/RA_Request_Form__c/RA_Request_Form__c.object-meta.xml
<CustomObject>
    <label>RA Request Form</label>
    <nameField>
        <displayFormat>RA-{000}</displayFormat>
        <label>RA Request Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RA Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>