force-app/main/default/objects/RA_Request_Form__c/fields/Address_including_P_O_Box_if_applicabl__c.field-meta.xml
<CustomField>
    <fullName>Address_including_P_O_Box_if_applicabl__c</fullName>
    <label>Address (including P.O. Box if applicabl</label>
    <type>TextArea</type>
</CustomField>