force-app/main/default/objects/RA_Request_Form__c/fields/Agent_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_ID__c</fullName>
    <label>Agent Email ID</label>
    <type>Email</type>
</CustomField>