force-app/main/default/objects/RA_Request_Form__c/fields/Agent_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Mobile_Number__c</fullName>
    <label>Agent Mobile Number</label>
    <type>Phone</type>
</CustomField>