force-app/main/default/objects/RA_Request_Form__c/fields/Beneficial_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Shareholders__c</fullName>
    <label>Beneficial Shareholders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>