force-app/main/default/objects/RA_Request_Form__c/fields/Buyer_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email_ID__c</fullName>
    <label>Buyer Email ID</label>
    <type>Email</type>
</CustomField>