force-app/main/default/objects/RA_Request_Form__c/fields/Buyer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Mobile_Number__c</fullName>
    <label>Buyer Mobile Number</label>
    <type>Phone</type>
</CustomField>