force-app/main/default/objects/RA_Request_Form__c/fields/Facsimile__c.field-meta.xml
<CustomField>
    <fullName>Facsimile__c</fullName>
    <label>Facsimile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>