force-app/main/default/objects/RA_Request_Form__c/fields/First_Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>First_Buyer_Address__c</fullName>
    <label>First Buyer Address</label>
    <type>TextArea</type>
</CustomField>