force-app/main/default/objects/RA_Request_Form__c/fields/First_Buyer_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>First_Buyer_Email_ID__c</fullName>
    <label>First Buyer Email ID</label>
    <type>Email</type>
</CustomField>