force-app/main/default/objects/RA_Request_Form__c/fields/First_Buyer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>First_Buyer_Mobile_Number__c</fullName>
    <label>First Buyer Mobile Number</label>
    <type>Phone</type>
</CustomField>