force-app/main/default/objects/RA_Request_Form__c/fields/First_Buyer_Name_as_per_Passport__c.field-meta.xml
<CustomField>
    <fullName>First_Buyer_Name_as_per_Passport__c</fullName>
    <label>First Buyer Name as per Passport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>