force-app/main/default/objects/RA_Request_Form__c/fields/Passport_No_of_Beneficial_Shareholders__c.field-meta.xml
<CustomField>
    <fullName>Passport_No_of_Beneficial_Shareholders__c</fullName>
    <label>Passport No of Beneficial Shareholders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>