force-app/main/default/objects/RA_Request_Form__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>CD_Project__c</referenceTo>
    <relationshipLabel>RA Request Forms</relationshipLabel>
    <relationshipName>RA_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>