force-app/main/default/objects/RA_Request_Form__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>