force-app/main/default/objects/RA_Request_Form__c/fields/Representative_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Representative_Passport_Number__c</fullName>
    <label>Representative Passport Number</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>