force-app/main/default/objects/RA_Request_Form__c/fields/Second_Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>Second_Buyer_Address__c</fullName>
    <label>Second Buyer Address</label>
    <type>TextArea</type>
</CustomField>