force-app/main/default/objects/RA_Request_Form__c/fields/Second_Buyer_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Second_Buyer_Email_ID__c</fullName>
    <label>Second Buyer Email ID</label>
    <type>Email</type>
</CustomField>