force-app/main/default/objects/RA_Request_Form__c/fields/Second_Buyer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Second_Buyer_Mobile_Number__c</fullName>
    <label>Second Buyer Mobile Number</label>
    <type>Phone</type>
</CustomField>