force-app/main/default/objects/RA_Request_Form__c/fields/Third_Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>Third_Buyer_Address__c</fullName>
    <label>Third Buyer Address</label>
    <type>TextArea</type>
</CustomField>