force-app/main/default/objects/RA_Request_Form__c/fields/Third_Buyer_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Third_Buyer_Email_ID__c</fullName>
    <label>Third Buyer Email ID</label>
    <type>Email</type>
</CustomField>