force-app/main/default/objects/RA_Request_Form__c/fields/Third_Buyer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Third_Buyer_Mobile_Number__c</fullName>
    <label>Third Buyer Mobile Number</label>
    <type>Phone</type>
</CustomField>