force-app/main/default/objects/RA_Request_Form__c/fields/Third_Buyer_Name_as_per_Passport__c.field-meta.xml
<CustomField>
    <fullName>Third_Buyer_Name_as_per_Passport__c</fullName>
    <label>Third Buyer Name as per Passport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>