force-app/main/default/objects/RA_Request_Form__c/recordTypes/Company.recordType-meta.xml
<RecordType>
    <fullName>Company</fullName>
    <active>true</active>
    <label>Company</label>
</RecordType>