force-app/main/default/objects/RA_Request_Form__c/recordTypes/Joint.recordType-meta.xml
<RecordType>
    <fullName>Joint</fullName>
    <active>true</active>
    <label>Joint</label>
</RecordType>